<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tutela</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log out</string>
    <string name="action_remove">Remove</string>
    <string name="action_edit_details">Edit details</string>
    <string name="action_edit_details_cancel">Cancel edit details</string>
    <string name="action_edit_details_done">Save details</string>
    <string name="action_add">Add new</string>
    <string name="action_search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- CheckInFragment -->
    <string name="no_checkins_needed">No check-ins needed!</string>
    <string name="did_you_take_1">Did you take your</string>
    <string name="did_you_take_2">%1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="previous_question">&lt; Previous question</string>
    <string name="questions_left">%1$s questions left</string>
    <string name="pain_medication">pain medication</string>

    <string name="checkin_notification_title">Time for scheduled check-in!</string>
    <string name="checkin_notification_text">Please answer some questions.</string>


    <!-- MyRemindersFragment -->
    <string name="edit">Edit</string>
    <string name="error_minimum_reminders">Sorry, you need at least four reminders!</string>

    <!-- PatientMainActivity -->
    <string name="my_medication">My Medication</string>
    <string name="my_doctors">My Doctors</string>
    <string name="my_reminders">My Reminders</string>

    <!-- My Medication Details -->
    <string name="medication_details">Medication Details</string>
    <string name="frequency">Frequency</string>
    <string name="notes_from_doctor">Notes from Doctor</string>
    <string name="doctor">Doctor</string>

    <!-- Doctor Details -->
    <string name="doctor_details">Doctor Details</string>
    <string name="name">Name</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone Number</string>

    <!-- Doctor Sections -->
    <string name="doctor_dashboard">Doctor Dashboard</string>
    <string name="my_patients">My Patients</string>
    <string name="symptoms">Symptoms</string>
    <string name="medication">Medication</string>
    <string name="alerts">Alerts</string>

    <!-- Dashboard -->
    <string name="dashboard_alert_text">%1$s has spent more than %2$s hours with %3$s at %4$s</string>
    <string name="dashboard_alert_button">VIEW TREATMENT</string>
    <string name="dashboard_patient_button">VIEW PATIENT</string>
    <string name="dashboard_top_bar_text">You have %1$s unread alerts</string>

    <!-- Symptom Details -->
    <string name="symptom_details">Symptom Details</string>
    <string name="edit_symptom_details">Edit Symptom Details</string>
    <string name="question">Question</string>
    <string name="answers">Answers (from best to worse)</string>
    <string name="more_than">More than</string>
    <string name="hours_of">hours of</string>
    <string name="choose_answer">Choose an answer</string>
    <string name="choose_hours">Choose hours before alert</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="optional">Optional</string>
    <string name="toast_new_symptom_success">New symptom added!</string>

    <!-- Medication Details -->
    <string name="default_symptoms">Default Symptoms</string>
    <string name="edit_medication_details">Edit Medication Details</string>
    <string name="toast_new_medication_success">New medication added!</string>

    <!-- MyPatients -->
    <string name="view_treatment">View treatment</string>
    <string name="set_treatment">Set treatment</string>

    <!-- Patient Details -->
    <string name="patient_details">Patient Details</string>
    <string name="patientdetails_first_name">First Name</string>
    <string name="patientdetails_last_name">Last Name</string>
    <string name="patientdetails_date_of_birth">Date of birth</string>
    <string name="patientdetails_mrn">Medical Record Number</string>
    <string name="patientdetails_email">E-mail</string>
    <string name="patientdetails_phone">Phone Number</string>

    <!-- Treatment Details -->
    <string name="treatment_details">Treatment Details</string>
    <string name="treatment_details_medication_title">Medication</string>
    <string name="treatment_details_symptoms_title">Symptoms</string>
    <string name="toast_new_treatment_success">New treatment added!</string>
    <string name="choose_medication">Choose a new medication</string>
    <string name="choose_symptom">Choose a new symptom to track</string>


    <string name="toast_save_details_failed">There was an error, please try again</string>
    <string name="toast_save_details_fields_missing">There are fields missing</string>

    <string name="add_new">Add New</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>


    <string name="transition_action_bar">transition_action_bar</string>

    <!-- Errors -->
    <string name="loading_layout_network_error">Network error</string>
    <string name="loading_layout_retry">Retry?</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <!-- View tags -->
    <string name="tag_alert_hours">hours</string>
    <string name="tag_alert_ansindex">ansindex</string>
    <string name="tag_medication_id">medicationId</string>
    <string name="tag_medication_name">medicationName</string>
    <string name="tag_symptom_id">symptomId</string>
    <string name="tag_symptom_name">symptomName</string>

</resources>
