<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:background="?attr/colorPrimary"
            android:transitionName="@string/transition_action_bar"
            app:title="@string/doctor_details"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <include layout="@layout/loading_layout"
             android:visibility="gone" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                    android:id="@+id/firstname_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_caption"
                    android:text="@string/firstname"/>
            <TextView
                    android:id="@+id/firstname_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_body"
                    android:text="@string/firstname"/>

            <View
                    style="@style/separator"/>

            <TextView
                    android:id="@+id/lastname_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_caption"
                    android:text="@string/lastname"/>
            <TextView
                    android:id="@+id/lastname_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_body"
                    android:text="@string/lastname"/>

            <View
                    style="@style/separator"/>

            <TextView
                    android:id="@+id/email_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_caption"
                    android:text="@string/email"/>
            <TextView
                    android:id="@+id/email_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_body"
                    android:text="@string/email"/>

            <View
                    style="@style/separator"/>

            <TextView
                    android:id="@+id/phone_number_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_caption"
                    android:text="@string/phone_number"/>
            <TextView
                    android:id="@+id/phone_number_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_body"
                    android:text="@string/phone_number"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>