<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:background="?attr/colorPrimary"
            android:transitionName="@string/transition_medication_details"
            app:title="@string/medication_details"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mouth Pain"
                app:title="@string/my_doctors"
                android:textSize="29sp"
                android:textColor="@android:color/white"
                android:textStyle="normal"/>


    </android.support.v7.widget.Toolbar>

    <include layout="@layout/loading_layout"
             android:visibility="gone" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                    android:id="@+id/question_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_caption"
                    android:text="@string/question"/>
            <TextView
                    android:id="@+id/question_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_body"
                    android:text="How bad is your...?"/>

            <View style="@style/separator"/>

            <TextView
                    android:id="@+id/answers_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_caption"
                    android:text="@string/answers"/>
            <TextView
                    android:id="@+id/answers_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_body_list"
                    android:text="Good"/>

            <View  style="@style/separator"/>

            <TextView
                    android:id="@+id/alerts_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_caption"
                    android:text="@string/alerts"/>
            <TextView
                    android:id="@+id/alerts_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_body_list"
                    android:text="More than 24 hours of Bad"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>