<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:background="?attr/colorPrimary"
            android:transitionName="@string/transition_action_bar"
            app:title="@string/treatment_details"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="29sp"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"/>

                </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <include layout="@layout/loading_layout"
             android:visibility="gone" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

            <LinearLayout
                    android:visibility="visible"
                    android:id="@+id/layout_view_details"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:textStyle="bold"
                    android:text="@string/treatment_details_medication_title"/>

            <LinearLayout
                    android:id="@+id/medication_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

            <View style="@style/separator"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:textStyle="bold"
                    android:text="@string/treatment_details_symptoms_title"/>

            <LinearLayout
                    android:id="@+id/symptoms_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>
            </LinearLayout>

        <LinearLayout
                android:visibility="gone"
                android:id="@+id/layout_edit_details"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/medication_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_caption"
                    android:text="@string/medication"/>

            <LinearLayout
                    android:id="@+id/medication_edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            </LinearLayout>

            <Button
                    android:id="@+id/add_new_medication_button"
                    style="@style/button_flat"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/add_new"
                    android:visibility="gone"/>


            <View  style="@style/separator"/>

            <TextView
                    android:id="@+id/symptoms_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_caption"
                    android:text="@string/symptoms"/>

            <LinearLayout
                    android:id="@+id/symptoms_edit_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            </LinearLayout>

            <Button
                    android:id="@+id/add_new_symptom_button"
                    style="@style/button_flat"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:text="@string/add_new"
                    android:visibility="gone"/>

        </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>