<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="56dp"
            android:background="?attr/colorPrimary"
            android:transitionName="@string/transition_action_bar"
            app:title="@string/medication_details"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="29sp"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"/>

            <EditText
                    android:id="@+id/subtitle_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150dp"
                    android:text=""
                    android:textSize="29sp"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"
                    android:visibility="gone"/>


        </LinearLayout>


            </android.support.v7.widget.Toolbar>

    <include layout="@layout/loading_layout"
             android:visibility="gone" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                    android:visibility="gone"
                    android:id="@+id/default_symptoms_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/text_caption"
                    android:text="@string/default_symptoms"/>
            <LinearLayout
                    android:visibility="gone"
                    android:id="@+id/default_symptoms_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                <TextView
                        android:id="@+id/default_symptoms_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/text_body_list"
                        android:text="Mouth pain"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>